@@ -1,5 +1,6 @@
 * V1.9.3.1
-  * started new development version
+  * fixed minor bug when searching repo by UID when repo doesn't exist
+  * added CK internal var "debug". If set to "yes", print error when CK entries are broken or ignore them (now default)
 
 * V1.9.3 
   * fixed issue #80 (adding zip repo if starts with ~)
